--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -34,7 +34,14 @@
 <div class="pure-g-r">
     <div class="pure-u-3-5">
         <div id="testimony-box">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel odio vehicula, faucibus sapien id, fringilla ligula. In dignissim orci at est ultricies consectetur. Nam vitae auctor tellus, a iaculis enim. Vivamus vehicula ipsum eu arcu congue pharetra. Curabitur varius pharetra tellus sed sollicitudin. Donec ac pulvinar augue. Aenean sed blandit mi, vel hendrerit sem. Nam condimentum risus non tincidunt rhoncus. Fusce sed quam ultrices, feugiat metus id, ultricies enim. Sed vitae tellus facilisis tortor tempor pretium. Sed pellentesque mauris magna, vitae ullamcorper dolor suscipit sed. Nulla varius est erat, id venenatis neque varius in. Praesent vitae ultricies nunc, et viverra enim.</p>
+            <p>There are tons of good reasons to quit smoking. And there are tons of bad ones to start again.
+            To keep motivation and to make it a bigger deal than my own health, I've decided to give the money
+            I save to help gorillas.</p>
+            <p>Through books, movies and Internet, I've become more and more conscious about the wildlife and how
+            we need to protect it from ourselves. It's because of a special affinity with gorillas that I've picked this
+            non-profit.</p>
+            <p>Now, every time I crave for a cigarette, I look at this page and it reminds me that I'm not only doing it for
+            me. The more you will support DFGFI, the more you will support me. Thank you!</p>
         </div>
     </div>
     <div class="pure-u-2-5">
@@ -47,26 +54,34 @@
     <div class="pure-u-1-3">
         <div id="donations-box">
             <h1>Donations</h1>
-            <table class="pure-table pure-table-horizontal pure-table-striped">
-                <tbody>
-                    <tr>
-                        <td>My donations</td>
-                        <td>${{ profile.amount_donated }}</td>
-                    </tr>
-                    <tr>
-                        <td>My pledges</td>
-                        <td>${{ profile.amount_pledged|floatformat }}</td>
-                    </tr>
-                    <tr>
-                        <td>Supporters' donations</td>
-                        <td>${{ profile.supporter_donations }}</td>
-                    </tr>
-                    <tr>
-                        <td>Supporters' pledges</td>
-                        <td>${{ profile.supporter_pledges }}</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="pure-g">
+                <div class="pure-u-1-2">
+                    <div id="donation-box-top-left" class="donation-box">
+                        <div class="donation-label">My donations</div>
+                        <div class="donation-value">${{ profile.amount_donated }}</div>
+                    </div>
+                </div>
+                <div class="pure-u-1-2">
+                    <div id="donation-box-top-right" class="donation-box">
+                        <div class="donation-label">My pledges</div>
+                        <div class="donation-value">${{ profile.amount_pledged|floatformat }}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="pure-g">
+                <div class="pure-u-1-2">
+                    <div id="donation-box-bottom-left" class="donation-box">
+                        <div class="donation-label">Supporters' donations</div>
+                        <div class="donation-value">${{ profile.supporter_donations }}</div>
+                    </div>
+                </div>
+                <div class="pure-u-1-2">
+                    <div id="donation-box-bottom-right" class="donation-box">
+                        <div class="donation-label">Supporters' pledges</div>
+                        <div class="donation-value">${{ profile.supporter_pledges }}</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="pure-u-1-3">
@@ -98,9 +113,9 @@
                 </div>
             </div>
             <div><input type="submit" /></div>
-            <div id="pledge-disclaimer"><small>This is a pledge, I'll receive no money. First, you will receive an email to validate
+            <div id="pledge-disclaimer">This is a pledge, I'll receive no money. First, you will receive an email to validate
             your address. When I've reached the goal you set, you will receive another email with a link to the charity website
-            and a button to confirm your donation.</small></div>
+            and a button to confirm your donation.</div>
             </form>
             <div id="pledge-result">
                 <div class="message"></div>
