--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -117,6 +117,7 @@
             your address. When I've reached the goal you set, you will receive another email with a link to the charity website
             and a button to confirm your donation.</div>
             </form>
+            <div id="pledge-loading"></div>
             <div id="pledge-result">
                 <div class="message"></div>
             </div>
@@ -147,6 +148,8 @@ clock.start();
 
 $('#pledge-form').submit(function(e){
     e.preventDefault();
+    $('#pledge-form').hide();
+    $('#pledge-loading').show();
     var form = e.target;
     var data = {}
     $.each($(form).serializeArray(), function(){
@@ -155,7 +158,7 @@ $('#pledge-form').submit(function(e){
     $.post($(form).attr('action'), data, function(response){
         if (response.status) {
             $('#pledge-result .message').html(response.message);
-            $('#pledge-form').hide();
+            $('#pledge-loading').hide();
             $('#pledge-result').show();
         } else {
             $.each(response.errors, function(key, errors){
