--- a/src/iquitsupportit/static/css/style.css
+++ b/src/iquitsupportit/static/css/style.css
@@ -14,6 +14,23 @@ body {
     padding-bottom: 20px;
 }
 
+.messages {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+.messages li {
+    padding: 10px;
+}
+
+.messages .success{
+    color: white;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    background: rgb(28, 184, 65); /* this is a green */
+}
+
 /* HELLO BOX */
 .hello-box {
     width: 300px;
@@ -87,6 +104,7 @@ body {
     background: url("/static/img/shinda.jpg");
     color: #FEFEFE;
     font-weight: bold;
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);
 }
 #beneficiary {
     padding: 35px 0 25px 0;
