--- a/src/iquitsupportit/static/css/style.css
+++ b/src/iquitsupportit/static/css/style.css
@@ -119,6 +119,11 @@ body {
     padding: 25px 0 25px 0;
     font-size: 2.5em;
 }
+#copyright {
+    text-align: left;
+    font-size: 0.6em;
+    font-weight: normal;
+}
 /* END BENEFICIARY BOX*/
 
 /* TESTIMONY BOX */
