Bigger donate button

--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -85,7 +85,7 @@
                 {{ form.email }}
                 </div>
             </div>
-            <div><input type="submit" /></div>
+            <div id="donate-button"><input type="submit" value="Pledge to donate"/></div>
             <div id="pledge-disclaimer">This is a pledge, I'll receive no money. First, you will receive an email to validate
             your address. When I've reached the goal you set, you will receive another email with a link to the charity website
             and a button to confirm your donation.</div>
