--- a/src/iquitsupportit/static/css/style.css
+++ b/src/iquitsupportit/static/css/style.css
@@ -156,8 +156,15 @@ hr {
 #pledge-box {
     margin: 0 20px;
 }
+#donate-button {
+    text-align: center;
+}
+#pledge-box input[type=submit] {
+    margin: 15px 0;
+    padding: 10px;
+    font-weight: bold;
+}
 #pledge-disclaimer {
-    margin-top: 10px;
     font-style: italic;
     font-size: 0.8em;
 }
