Footer and share box

--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -99,6 +99,8 @@
     <div class="pure-u-1-3">
         <div id="info-box">
             <h1>Share</h1>
+            <div id="help">Help me, help them</div>
+            <div id="spread">Spread the word</div>
             <div id="share-buttons">
                 <span class='st_facebook_large' displayText='Facebook'></span>
                 <span class='st_twitter_large' displayText='Tweet'></span>
