--- a/src/iquitsupportit/templates/base.html
+++ b/src/iquitsupportit/templates/base.html
@@ -22,6 +22,13 @@
         {% endif %}
         {% block content %}
         {% endblock %}
+        <div class="pure-g-r">
+            <div class="pure-u-1">
+                <div id="footer">
+                    <strong>I Quit, Support Us</strong> made by Francois Gaudin - contact@iquitsupport.us
+                </div>
+            </div>
+        </div>
         </div>
     </body>
 </html>
