--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block title %}Support {{ profile.user.first_name }} for quitting smoking by supporting {{ profile.current_beneficiary.name }}{% endblock %}
 {% block content %}
@@ -100,6 +101,7 @@
         <div id="info-box">
             <h1>Share</h1>
             <div id="help">Help me, help them</div>
+            <div id="logo"><a href="{{ profile.current_beneficiary.url }}" target="_blank"><img src="{% static "img/logo.gif" %}" /></a></div>
             <div id="spread">Spread the word</div>
             <div id="share-buttons">
                 <span class='st_facebook_large' displayText='Facebook'></span>
