--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -51,11 +51,7 @@
     <div class="pure-u-1-3">
         <div id="donations-box">
             <h1>Donations</h1>
-            <div class="donation-label">Your donations and pledges</div>
-            <div class="donation-value">${{ profile.supporter_donations_and_pledges }}</div>
-            <hr>
-            <div class="donation-label">My donations</div>
-            <div class="donation-value">${{ profile.amount_pledged|floatformat:"0" }}</div>
+            <div id="donations-chart" style="width: 280px; height: 280px;"></div>
         </div>
     </div>
     <div class="pure-u-1-3">
@@ -146,6 +142,31 @@ $('#pledge-form').submit(function(e){
         }
     });
 });
+</script>
+
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">
+  google.load("visualization", "1", {packages:["corechart"]});
+  google.setOnLoadCallback(drawChart);
+  function drawChart() {
+    var data = google.visualization.arrayToDataTable([
+      ['Origin', 'Amount (in $)'],
+      ['My donations',  {{ profile.amount_pledged|floatformat:"0" }}],
+      ['Your donations',  {{ profile.supporter_donations }}],
+      ['Your pledges', {{ profile.supporter_pledges }}],
+    ]);
+
+  var options = {
+    legend: 'none',
+    pieSliceText: 'label',
+    chartArea:{left:10,top:10,width:"90%",height:"90%"},
+    fontSize: 12,
+    slices: [{color: '#5C8727'}, {color: '#FF9900'}, {color: '#DC3912'}]
+  };
+
+    var chart = new google.visualization.PieChart(document.getElementById('donations-chart'));
+    chart.draw(data, options);
+  }
 </script>
 
 <script>
