--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -51,7 +51,7 @@
     <div class="pure-u-1-3">
         <div id="donations-box">
             <h1>Donations</h1>
-            <div id="donations-chart" style="width: 280px; height: 280px;"></div>
+            <div id="donations-chart" style="width: 280px; height: 280px;"><div class="loading"></div></div>
         </div>
     </div>
     <div class="pure-u-1-3">
@@ -87,7 +87,7 @@
             your address. When I've reached the goal you set, you will receive another email with a link to the charity website
             and a button to confirm your donation.</div>
             </form>
-            <div id="pledge-loading"></div>
+            <div id="pledge-loading" class="loading"></div>
             <div id="pledge-result">
                 <div class="message"></div>
             </div>
