--- a/src/iquitsupportit/static/css/style.css
+++ b/src/iquitsupportit/static/css/style.css
@@ -5,13 +5,12 @@
 body {
     background: url('/static/img/binding_dark.png') #434343;
 }
-
-hr {
-  border: 1px solid #999;
-  width: 50%;
-  margin-bottom: 20px;
+.loading {
+    height: 32px;
+    width: 32px;
+    margin: 0 auto;
+    background: url('/static/img/loading.gif');
 }
-
 #content {
     max-width: 1024px;
     margin: 0 auto;
@@ -184,10 +183,6 @@ hr {
     font-size: 0.8em;
 }
 #pledge-loading {
-    height: 32px;
-    width: 32px;
-    margin: 0 auto;
-    background: url('/static/img/loading.gif');
     display: none;
 }
 /* END PLEDGE BOX*/
