--- a/src/iquitsupportit/templates/base.html
+++ b/src/iquitsupportit/templates/base.html
@@ -23,7 +23,7 @@
         <div class="pure-g-r">
             {% if user.is_authenticated %}
                 <div class="pure-u-1">
-                <div id="loggedin-menu"><a href="{% url "edit" %}">Edit your page</a> <a href="{% url "logout" %}">Logout</a></div>
+                <div id="loggedin-menu"><a href="{% url "me" %}">View your page</a> <a href="{% url "edit" %}">Edit your page</a> <a href="{% url "logout" %}">Logout</a></div>
                 </div>
             {% else %}
             <div class="pure-u-1">
@@ -58,7 +58,7 @@
         <div class="pure-g-r">
             <div class="pure-u-1">
                 <div id="footer">
-                    <strong>I Quit, Support Us</strong> made by Francois Gaudin - contact@iquitsupport.us
+                    <strong>{{ sitename }}</strong> made by {{ contact.0 }} - {{ contact.1 }}
                 </div>
             </div>
         </div>
