--- a/src/iquitsupportit/quitter/templates/edit.html
+++ b/src/iquitsupportit/quitter/templates/edit.html
@@ -80,10 +80,17 @@
             <fieldset>
                 <legend>Charity</legend>
                 <div class="pure-g">
-                    <div class="pure-u-1">
+                    <div class="pure-u-5-8">
                         {{ profile_form.current_beneficiary.label_tag }}
                         {{ profile_form.current_beneficiary }}
                         {{ profile_form.current_beneficiary.errors }}
+                        <div id="beneficiary-form">
+                        {{ beneficiary_form }}
+                        </div>
+                    </div>
+                    <div class="pure-u-3-8">
+                        <p><em>Or create a new one</em></p>
+                        {{ new_beneficiary_form }}
                     </div>
                 </div>
             </fieldset>
@@ -107,5 +114,12 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+$('#id_current_beneficiary').change(function(e){
+    $.get('{% url "beneficiary_form" 1 %}'.replace('1', $(e.target).val()), function(response){
+        $('#beneficiary-form').html(response);
+    })
+});
+</script>
 {% endif %}
 {% endblock %}
