--- a/src/iquitsupportit/quitter/templates/edit.html
+++ b/src/iquitsupportit/quitter/templates/edit.html
@@ -28,7 +28,7 @@
 <div class="pure-g-r">
     <div class="pure-u-1">
         <div id="edit-box">
-            <form class="pure-form pure-form-stacked" action="" method="post">
+            <form class="pure-form pure-form-stacked" action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset>
                 <legend>Profile</legend>
