--- a/src/iquitsupportit/static/css/style.css
+++ b/src/iquitsupportit/static/css/style.css
@@ -38,7 +38,9 @@ body {
 .messages .info{
     background: #0078E7;
 }
-
+.messages .warning{
+    background: rgb(223, 117, 20);
+}
 .messages .error {
     background: rgb(202, 60, 60);
 }
@@ -199,6 +201,7 @@ body {
 #media-box {
     margin: 40px auto;
     width: 360px;
+    text-align:center;
 }
 /* END MEDIA BOX*/
 
