--- a/src/iquitsupportit/templates/base.html
+++ b/src/iquitsupportit/templates/base.html
@@ -21,18 +21,12 @@
         </ul>
         {% endif %}
         <div class="pure-g-r">
+            <div class="pure-u-1-2"></div>
+            <div class="pure-u-1-2 header">
             {% if user.is_authenticated %}
-                <div class="pure-u-1">
-                <div id="loggedin-menu"><a href="{% url "me" %}">View your page</a> <a href="{% url "edit" %}">Edit your page</a> <a href="{% url "logout" %}">Logout</a></div>
-                </div>
+                <div id="loggedin-menu" class="menu"><a href="{% url "me" %}">View your page</a> <a href="{% url "edit" %}">Edit your page</a> <a href="{% url "logout" %}">Logout</a></div>
             {% else %}
-            <div class="pure-u-1">
-                <div id="login-link">Quitting too? Want your own page? <a href="#" id="signup">Sign up</a> - <a href="#" id="login">Log in</a></div>
-            </div>
-            {% endif %}
-        </div>
-        <div class="pure-g-r">
-            <div class="pure-u-1">
+                <div id="login-link" class="menu">Quitting too? Want your own page? <a href="#" id="signup">Sign up</a> or <a href="#" id="login">Log in</a></div>
                 <div id="signup-box">
                     <form class="pure-form" action="{% url "signup" %}" method="post">
                     {% csrf_token %}
@@ -40,10 +34,6 @@
                     <input type="submit" value="Signup"/>
                     </form>
                 </div>
-            </div>
-        </div>
-        <div class="pure-g-r">
-            <div class="pure-u-1">
                 <div id="login-box">
                     <form class="pure-form" action="{% url "login" %}" method="post">
                     {% csrf_token %}
@@ -51,6 +41,7 @@
                     <input type="submit" value="Login"/>
                     </form>
                 </div>
+            {% endif %}
             </div>
         </div>
         {% block content %}
